--- a/playground/index.html
+++ b/playground/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <script type="module" src="/script.js"></script>
+    <script type="module" src="/src/script.ts"></script>
 </body>
 
 </html>
