--- a/front/src/app.html
+++ b/front/src/app.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html data-theme="sahara" lang="fr">
 	<head>
+		<title>Le Grimoire Infini</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
