--- a/front/src/app.html
+++ b/front/src/app.html
@@ -1,16 +1,14 @@
 <!doctype html>
-<html data-theme="sahara" lang="fr">
+<html data-mode="light" data-theme="sahara" lang="fr">
+    <head>
+        <title>Le Grimoire Infini</title>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        %sveltekit.head%
+    </head>
 
-<head>
-	<title>Le Grimoire Infini</title>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	%sveltekit.head%
-</head>
-
-<body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
-</body>
-
+    <body data-sveltekit-preload-data="hover">
+        <div style="display: contents">%sveltekit.body%</div>
+    </body>
 </html>
